--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -160,7 +160,39 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 [bar/vncbar]
+background = ${colors.background}
+foreground = ${colors.foreground}
+height = 40
+fixed-center = true
 
+line-size = 3
+
+border-left-size = ${vars.pad1}
+border-right-size = ${vars.pad1}
+border-top-size = ${vars.pad1}
+border-bottom-size = ${vars.pad1}
+
+padding-left = 2
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 1
+
+font-0 = Fira Mono:size=13;0
+font-1 = Weather Icons:size=13;0
+font-2 = Wuncon Siji:antialias=false:pixelsize=13;1		# Symbols (CPU, RAM, etc.)
+font-3 = Noto Sans CJK JP:size=13:antialias=true;0		# (Japanese) Band names, etc.
+font-4 = FontAwesome:size=13;0
+font-5 = Noto Sans Mono CJK TC:size=13
+
+modules-left = i3 jpntime jpnweather
+modules-center = date
+modules-right = pulseaudio weather ip memory cpu cpu_temp tray
+
+wm-restack = i3
+scroll-up = i3wm-wsprev
+scroll-down = i3wm-wsnext
+cursor-click = pointer
 ;=====================================================================================================================
 
 [module/tray]
