--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -28,7 +28,7 @@ alert = #9869b2
 pad1=0
 
 [bar/primary]
-monitor = DisplayPort-0
+monitor = DP-2
 background = ${colors.background}
 foreground = ${colors.foreground}
 height = 40
@@ -64,8 +64,8 @@ scroll-down = i3wm-wsnext
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/secondary]
-monitor = DisplayPort-1
-bottom = true
+monitor = DP-0
+bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
 height = 40
@@ -138,7 +138,7 @@ scroll-down = i3wm-wsnext
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/tray]
-monitor=DisplayPort-0
+monitor=DP-2
 override-redirect = true
 radius = 8
 padding-left = 0
@@ -162,8 +162,7 @@ foreground = ${colors.foreground}
 [bar/vncbar]
 background = ${colors.background}
 foreground = ${colors.foreground}
-height = 40
-fixed-center = true
+height = 9
 
 line-size = 3
 
@@ -178,12 +177,12 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Fira Mono:size=13;0
-font-1 = Weather Icons:size=13;0
-font-2 = Wuncon Siji:antialias=false:pixelsize=13;1		# Symbols (CPU, RAM, etc.)
-font-3 = Noto Sans CJK JP:size=13:antialias=true;0		# (Japanese) Band names, etc.
-font-4 = FontAwesome:size=13;0
-font-5 = Noto Sans Mono CJK TC:size=13
+font-0 = Fira Mono:size=7;0
+font-1 = Weather Icons:size=7;0
+font-2 = Wuncon Siji:antialias=false:pixelsize=7;1		# Symbols (CPU, RAM, etc.)
+font-3 = Noto Sans CJK JP:size=7:antialias=true;0		# (Japanese) Band names, etc.
+font-4 = FontAwesome:size=7;0
+font-5 = Noto Sans Mono CJK TC:size=7
 
 modules-left = i3 jpntime jpnweather
 modules-center = date
