--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -28,7 +28,7 @@ alert = #9869b2
 pad1=0
 
 [bar/primary]
-monitor = DP-2
+monitor = DP-1
 background = ${colors.background}
 foreground = ${colors.foreground}
 height = 40
@@ -48,23 +48,24 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = Fira Mono:size=13;0
-font-1 = Weather Icons:size=13;0
+#font-1 = Weather Icons:size=13;0
+font-1 = NotoEmoji:scale=10
 font-2 = Wuncon Siji:antialias=false:pixelsize=13;1		# Symbols (CPU, RAM, etc.)
 font-3 = Noto Sans CJK JP:size=13:antialias=true;0		# (Japanese) Band names, etc.
 font-4 = FontAwesome:size=13;0
 font-5 = Noto Sans Mono CJK TC:size=13
 
-modules-left = i3 jpntime jpnweather
+modules-left = i3 jpntime
 modules-center = date
-modules-right = pulseaudio weather ip memory cpu cpu_temp tray
+modules-right = light dark pulseaudio ip memory cpu cpu_temp tray
 
 wm-restack = i3
-scroll-up = i3wm-wsprev
-scroll-down = i3wm-wsnext
+scroll-up = #i3.prev
+scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/secondary]
-monitor = DP-0
+monitor = DP-2
 bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -91,13 +92,13 @@ font-3 = Noto Sans CJK JP:size=14:antialias=true;0		# (Japanese) Band names, etc
 font-4 = FontAwesome:size=14;0
 font-5 = Noto Sans Mono CJK TC:size=14
 
-modules-left = i3 jpnweather
-modules-center = playing
+modules-left = i3 jpntime
+modules-center = date
 modules-right = highdetailcpu
 
 wm-restack = i3
-scroll-up = i3wm-wsprev
-scroll-down = i3wm-wsnext
+scroll-up = #i3.prev
+scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/third]
@@ -133,12 +134,12 @@ modules-center = date
 modules-right = 
 
 wm-restack = i3
-scroll-up = i3wm-wsprev
-scroll-down = i3wm-wsnext
+scroll-up = #i3.prev
+scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/tray]
-monitor=DP-2
+#monitor=DP-2
 override-redirect = true
 radius = 8
 padding-left = 0
@@ -162,7 +163,7 @@ foreground = ${colors.foreground}
 [bar/vncbar]
 background = ${colors.background}
 foreground = ${colors.foreground}
-height = 9
+height = 40
 
 line-size = 3
 
@@ -177,20 +178,20 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Fira Mono:size=7;0
-font-1 = Weather Icons:size=7;0
-font-2 = Wuncon Siji:antialias=false:pixelsize=7;1		# Symbols (CPU, RAM, etc.)
-font-3 = Noto Sans CJK JP:size=7:antialias=true;0		# (Japanese) Band names, etc.
-font-4 = FontAwesome:size=7;0
-font-5 = Noto Sans Mono CJK TC:size=7
+font-0 = Fira Mono:size=14;0
+font-1 = Weather Icons:size=14;0
+font-2 = Wuncon Siji:antialias=false:pixelsize=14;1		# Symbols (CPU, RAM, etc.)
+font-3 = Noto Sans CJK JP:size=14:antialias=true;0		# (Japanese) Band names, etc.
+font-4 = FontAwesome:size=14;0
+font-5 = Noto Sans Mono CJK TC:size=14
 
-modules-left = i3 jpntime jpnweather
+modules-left = i3 jpntime 
 modules-center = date
-modules-right = pulseaudio weather ip memory cpu cpu_temp tray
+modules-right = pulseaudio ip memory cpu cpu_temp tray
 
 wm-restack = i3
-scroll-up = i3wm-wsprev
-scroll-down = i3wm-wsnext
+scroll-up = #i3.prev
+scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 
@@ -201,7 +202,7 @@ click-left = bash $HOME/.config/polybar/tinybar.sh
 
 [module/ip]
 type=custom/script
-exec=echo "%{F#0bef26}$(ip -4 -o addr show enp42s0 | awk '{print $4}')"
+exec=echo "%{F#0bef26}$(ip -4 -o addr show enp40s0 | awk '{print $4}')"
 interval = 5
 format-underline = #0bef26
 
@@ -242,6 +243,10 @@ type = internal/memory
 interval = 3
 label = %{F#a67bfc}%mb_used%
 
+[module/bus]
+type=custom/script
+exec=echo "| SD-$(~/Scripts/ctabus.sh 8843|head -n 1) | ND-$(~/Scripts/ctabus.sh 8934|head -n 1) | EF-$(~/Scripts/ctabus.sh 18348 | head -n 1) | EA-$(~/Scripts/ctabus.sh 15220 | head -n 1)"
+interval=30
 
 [module/jpntime]
 type=custom/script
@@ -303,9 +308,21 @@ label-urgent-padding = 1
 type = custom/script
 exec = echo ""
 
+[module/light]
+type = custom/script
+exec = echo "💡"
+interval = 1
+click-left = ~/Scripts/lighton.sh
+
+[module/dark]
+type = custom/script
+exec = echo "🌙"
+interval = 1
+click-left = ~/Scripts/lightoff.sh
+
 [module/playing]
 type = custom/script
-exec = python ~/.config/polybar/player-mpris-tail.py -f '{icon} {artist} - {title}'
+exec = python ~/.config/polybar/player-mpris-tail.py -f '{title}'
 tail = true
 click-left = python ~/.config/polybar/player-mpris-tail.py previous &
 click-right = python ~/.config/polybar/player-mpris-tail.py next &
@@ -325,11 +342,11 @@ label-song-ellipsis = true
 [module/date]
 type = internal/date
 interval = 1
-time-alt = %d/%m/%Y | %H:%M:%S
-time = %A %B %d, %Y | %H:%M:%S
+time-alt =%d/%m/%Y | %H:%M:%S
+time =%A %B %d, %Y | %H:%M:%S
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #ff8e2c
-label = %date% %time%
+label =%date% %time%
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -337,7 +354,7 @@ type = internal/pulseaudio
 format-volume = <bar-volume>
 ;label-volume = VOL
 ;format-muted-prefix = ""
-label-muted =      
+label-muted = 🔇
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
 bar-volume-foreground-1 = #55aa55
