--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -28,7 +28,7 @@ alert = #9869b2
 pad1=0
 
 [bar/primary]
-monitor = DP-1
+monitor = DisplayPort-0
 background = ${colors.background}
 foreground = ${colors.foreground}
 height = 40
@@ -57,7 +57,7 @@ font-5 = Noto Sans Mono CJK TC:size=13
 
 modules-left = i3 jpntime
 modules-center = date
-modules-right = light dark pulseaudio ip memory cpu cpu_temp tray
+modules-right = weather light dark pulseaudio ip memory cpu cpu_temp tray
 
 wm-restack = i3
 scroll-up = #i3.prev
@@ -65,7 +65,7 @@ scroll-down = #i3.next
 cursor-click = pointer
 ;=====================================================================================================================
 [bar/secondary]
-monitor = DP-2
+monitor = DisplayPort-1
 bottom = false
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -254,8 +254,15 @@ exec=TZ='Japan' date "+%R"
 interval=60
 
 [module/weather]
+type=custom/script
+exec=curl -s 'wttr.in/Chicago?format=3' | cut -c 10-
+exec-if = ping wttr.in -c 1
+interval=13000
+format-underline = #0befff
+
+[module/notweather]
 type = custom/script
-exec = echo "%{F#ffffff} $(/usr/share/polybar-forecast)"
+exec = echo "%{F#ffffff} $(/home/$USER/Scripts/polybar-forecast)"
 exec-if = ping openweathermap.org -c 1
 color=
 interval = 600
